Add images, nav and cols

--- a/index.html
+++ b/index.html
@@ -13,24 +13,40 @@
   <section class="flex-container">
     <header class="row header-container">
       <div class="col-6 logo">
-          <img src="fishes.jpg" alt="fishes"/>
+          <img src="images/fishes.jpg" alt="fishes"/>
       </div>
       <div class="col-6 main-title">
         <h1>Tom Spencer</h1>
         <h4>Coder</h4>
       </div>
     </header>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Work <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Contact</a>
-    </div>
-  </div>
-</nav>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Work <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+          </div>
+        </div>
+      </nav>
+      <div class="row">
+        <div class="col-12">
+          <img src="images/flower.jpg" alt="picture of a flower">
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-12 featured">
+            <h1>Featured Work</h1>
+          </div>
+      </div>
+      <div class="row pics">
+        <div class="col-sm-4"><img src="images/lion.jpg" alt="picture of a lion"><h2>Project one</h2></div>
+        <div class="col-sm-4"><img src="images/cow.jpg" alt="picture of a cow"><h2>Project two</h2></div>
+        <div class="col-sm-4"><img src="images/wet-flower.jpg" alt="picture of a wet flower"><h2>Project three</h2></div>
+      </div>
+
 
   </section>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
