Add footer and icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -26,8 +27,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Work <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link active" href="#work">Work <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#contact">Contact</a>
           </div>
         </div>
       </nav>
@@ -37,7 +38,7 @@
         </div>
       </div>
       <div class="row">
-          <div class="col-12 featured">
+          <div class="col-12 featured" id="work">
             <h1>Featured Work</h1>
           </div>
       </div>
@@ -46,9 +47,36 @@
         <div class="col-sm-4"><img src="images/cow.jpg" alt="picture of a cow"><h2>Project two</h2></div>
         <div class="col-sm-4"><img src="images/wet-flower.jpg" alt="picture of a wet flower"><h2>Project three</h2></div>
       </div>
-
-
   </section>
+
+  <section id="contact" class="bg-light py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2>Get In Touch</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+        </div>
+        <div class="col-2">
+          <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-2">
+          <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-2">
+          <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-2">
+          <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-2">
+          <a style="padding-left:15px" href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+      </div>
+  </section>
+
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
