--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 
   <section class="flex-container">
     <header class="row header-container">
-      <div class="col-6 logo">
+      <div class="col-3 logo">
+        <div class="card">
           <img src="images/fishes.jpg" alt="fishes"/>
+          <div class="card-block">
+          </div>
+        </div>
       </div>
-      <div class="col-6 main-title">
+      <div class="col-9 main-title">
         <h1>Tom Spencer</h1>
         <h4>Coder</h4>
       </div>
     </header>
+  </section>
+  <section>
       <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,34 +38,83 @@
           </div>
         </div>
       </nav>
-      <div class="row">
-        <div class="col-12">
-          <img src="images/flower.jpg" alt="picture of a flower">
+    </section>
+      <section>
+        <div class="row">
+          <div class="col-12">
+            <div class="card">
+              <img src="images/flower.jpg" alt="picture of a flower">
+            <div class="card-block">
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
+      <section>
       <div class="row">
-          <div class="col-12 featured" id="work">
-            <h1>Featured Work</h1>
+          <div class="col-lg-12" id="work">
+              <h2>Featured Work</h2>
           </div>
       </div>
-      <div class="row pics">
-        <div class="col-sm-4"><img src="images/lion.jpg" alt="picture of a lion"><h2>Project one</h2></div>
-        <div class="col-sm-4"><img src="images/cow.jpg" alt="picture of a cow"><h2>Project two</h2></div>
-        <div class="col-sm-4"><img src="images/wet-flower.jpg" alt="picture of a wet flower"><h2>Project three</h2></div>
+    </section>
+
+    <section>
+      <div class="row">
+      <div class="col-lg-4">
+        <div class="card">
+          <img src="images/lion.jpg" class="card-img-top img-fluid" />
+          <div class="card-block">
+            <h3 class="card-title">Project one</h3>
+          </div>
+        </div>
       </div>
+      <div class="col-lg-4">
+        <div class="card">
+            <img src="images/cow.jpg" alt="picture of a cow" />
+            <div class="card-block">
+              <h3 class="card-title">Project two</h3>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+            <img src="images/wet-flower.jpg" alt="picture of a wet flower">
+          <div class="card-block">
+            <h3 class="card-title">Project three</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section id="contact" class="bg-light py-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>Get In Touch</h2>
+            <h2 class="card-title"> Get In Touch</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-2">
+      <div class="row icons">
+        <div class="col-md-2">
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
+            <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-md-2">
+            <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-md-2">
+            <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-md-2">
+            <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+        <div class="col-md-2">
+            <a href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square" style="font-size:36px; color:black;"></i></a>
+        </div>
+
+        <!-- <div class="col-2">
           <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter" style="font-size:36px; color:black;"></i></a>
         </div>
         <div class="col-2">
@@ -73,7 +128,7 @@
         </div>
         <div class="col-2">
           <a style="padding-left:15px" href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square" style="font-size:36px; color:black;"></i></a>
-        </div>
+        </div> -->
       </div>
   </section>
 
