--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
   <body>
 
   <section class="flex-container">
+    <div class="container">
     <header class="row header-container">
-      <div class="col-3 logo">
+      <div class="col-md-3 logo">
         <div class="card">
           <img src="images/fishes.jpg" alt="fishes"/>
           <div class="card-block">
           </div>
         </div>
       </div>
-      <div class="col-9 main-title">
+      <div class="col-md-9 main-title">
         <h1>Tom Spencer</h1>
         <h4>Coder</h4>
       </div>
     </header>
+    </div>
   </section>
-  <section>
+  <section class="flex-container">
       <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -39,7 +41,7 @@
         </div>
       </nav>
     </section>
-      <section>
+      <section class="flex-container">
         <div class="row">
           <div class="col-12">
             <div class="card">
@@ -50,7 +52,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="section-container">
       <div class="row">
           <div class="col-lg-12" id="work">
               <h2>Featured Work</h2>
@@ -58,7 +60,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section-container">
       <div class="row">
       <div class="col-lg-4">
         <div class="card">
@@ -99,36 +101,20 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-2">
-            <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter" style="font-size:36px; color:black;"></i></a>
+            <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter icons"></i></a>
         </div>
         <div class="col-md-2">
-            <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square" style="font-size:36px; color:black;"></i></a>
+            <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square icons"></i></a>
         </div>
         <div class="col-md-2">
-            <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen" style="font-size:36px; color:black;"></i></a>
+            <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen icons"></i></a>
         </div>
         <div class="col-md-2">
-            <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square" style="font-size:36px; color:black;"></i></a>
+            <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square icons"></i></a>
         </div>
         <div class="col-md-2">
-            <a href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square" style="font-size:36px; color:black;"></i></a>
+            <a href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square icons"></i></a>
         </div>
-
-        <!-- <div class="col-2">
-          <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter" style="font-size:36px; color:black;"></i></a>
-        </div>
-        <div class="col-2">
-          <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square" style="font-size:36px; color:black;"></i></a>
-        </div>
-        <div class="col-2">
-          <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen" style="font-size:36px; color:black;"></i></a>
-        </div>
-        <div class="col-2">
-          <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square" style="font-size:36px; color:black;"></i></a>
-        </div>
-        <div class="col-2">
-          <a style="padding-left:15px" href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square" style="font-size:36px; color:black;"></i></a>
-        </div> -->
       </div>
   </section>
 
