Corrections for html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <div class="container">
     <header class="row header-container">
       <div class="col-md-3 logo">
-        <div class="card">
           <img src="images/fishes.jpg" alt="fishes"/>
-          <div class="card-block">
-          </div>
-        </div>
       </div>
       <div class="col-md-9 main-title">
         <h1>Tom Spencer</h1>
@@ -67,6 +63,7 @@
           <img src="images/lion.jpg" class="card-img-top img-fluid" />
           <div class="card-block">
             <h3 class="card-title">Project one</h3>
+            <p>In this project we looked at lions</p>
           </div>
         </div>
       </div>
@@ -75,6 +72,7 @@
             <img src="images/cow.jpg" alt="picture of a cow" />
             <div class="card-block">
               <h3 class="card-title">Project two</h3>
+              <p>This project was all about cows</p>
             </div>
         </div>
       </div>
@@ -83,6 +81,7 @@
             <img src="images/wet-flower.jpg" alt="picture of a wet flower">
           <div class="card-block">
             <h3 class="card-title">Project three</h3>
+            <p>This project was all about flowers</p>
           </div>
         </div>
       </div>
