--- a/index.html
+++ b/index.html
@@ -4,81 +4,100 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>
+      Tom Spencer Portfolio
+    </title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-  <section class="flex-container">
-    <div class="container">
-    <header class="row header-container">
-      <div class="col-md-3 logo">
-          <img src="images/fishes.jpg" alt="fishes"/>
+  <div class="container">
+    <header class="row">
+      <div class="col">
+
+          <div class="img-responsive">
+            <img src="images/tomspencer_logo.png" alt="tomspencer_logo" class="img-fluid"
+            srcset="images/tomspencer_logo.png 1024w, images/tomspencer_logo.png 640w, images/tomspencer_logo.png 320w"/>
+          </div>
       </div>
-      <div class="col-md-9 main-title">
+      <div class="col main-title">
         <h1>Tom Spencer</h1>
-        <h4>Coder</h4>
+        <h4>Web Ninja</h4>
       </div>
     </header>
-    </div>
-  </section>
-  <section class="flex-container">
-      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#work">Work <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" href="#contact">Contact</a>
-          </div>
-        </div>
-      </nav>
-    </section>
-      <section class="flex-container">
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <img src="images/flower.jpg" alt="picture of a flower">
-            <div class="card-block">
-            </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-container">
-      <div class="row">
-          <div class="col-lg-12" id="work">
-              <h2>Featured Work</h2>
-          </div>
-      </div>
-    </section>
+  </div>
 
-    <section class="section-container">
-      <div class="row">
-      <div class="col-lg-4">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" href="#work">Featured Work</a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#contact">Contact</a>
+    </li>
+  </ul>
+</div>
+</nav>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
         <div class="card">
-          <img src="images/lion.jpg" class="card-img-top img-fluid" />
+          <div class="img-responsive">
+            <img src="images/flower.jpg" alt="picture of a flower" class="img-fluid"
+            srcset="images/flower.jpg 1024w, images/flower.jpg 640w, images/flower.jpg 320w"/>
+          </div>
+          <div class="card-block">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-12" id="work">
+            <h2>Featured Work</h2>
+        </div>
+    </div>
+  </div>
+
+    <div class="container">
+      <div class="row">
+      <div class="col-md-4 col-sm-4 col-xs-4">
+        <div class="card">
+            <img src="images/lion.jpg" alt="picture of a lion" class="card-img-top img-fluid"
+            srcset="images/lion.jpg 1024w, images/lion.jpg 640w, images/lion.jpg 320w"
+            sizes="(min-width: 1000px) 50vw, 100vw"/>
           <div class="card-block">
             <h3 class="card-title">Project one</h3>
             <p>In this project we looked at lions</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-md-4 col-sm-4 col-xs-4">
         <div class="card">
-            <img src="images/cow.jpg" alt="picture of a cow" />
+            <img src="images/cow.jpg" alt="picture of a cow" class="card-img-top img-fluid"
+            srcset="images/cow.jpg 1024w, images/cow.jpg 640w, images/cow.jpg 320w"
+            sizes="(min-width: 1000px) 50vw, 100vw"/>
             <div class="card-block">
               <h3 class="card-title">Project two</h3>
               <p>This project was all about cows</p>
             </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-md-4 col-sm-4 col-xs-4">
         <div class="card">
-            <img src="images/wet-flower.jpg" alt="picture of a wet flower">
+            <img src="images/wet-flower.jpg" alt="picture of a wet flower" class="card-img-top img-fluid"
+            srcset="images/wet-flower.jpg 1024w, images/wet-flower.jpg 640w, images/wet-flower.jpg 320w"
+            sizes="(min-width: 1000px) 50vw, 100vw"/>
           <div class="card-block">
             <h3 class="card-title">Project three</h3>
             <p>This project was all about flowers</p>
@@ -86,39 +105,37 @@
         </div>
       </div>
     </div>
+  </div>
 
-  </section>
-
-  <section id="contact" class="bg-light py-5">
+  <div id="contact" class="bg-light py-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
             <h2 class="card-title"> Get In Touch</h2>
         </div>
       </div>
-      <div class="row icons">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2">
+      <div class="row">
+        <div class="col offset-sm-1">
             <a href="https://www.twitter.com/tomspencerr/"><i class="fa fa-twitter icons"></i></a>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <a href="https://www.github.com/tomspencerlondon"><i class="fa fa-github-square icons"></i></a>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <a href="https://codepen.io/tomspencer1978/"><i class="fa fa-codepen icons"></i></a>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <a href="https://www.linkedin.com/in/tom-spencer/"><i class="fa fa-linkedin-square icons"></i></a>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <a href="https://youtu.be/WBU9OV6UTcY"><i class="fa fa-youtube-square icons"></i></a>
         </div>
       </div>
-  </section>
+    </div>
+  </div>
 
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
